# immunize

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
_planning/: ARCHITECTURE.md  ARCHITECTURE_1B.md  HOW_TO_USE.md  HOW_TO_USE_1B.md  LAUNCH_LIBRARY.md  MATCHER_CALIBRATION_V020.md  PATTERN_AUTHORING.md  PLAN.md  PLAN_1B.md  PYPI_PUBLISHING.md  SPEC.md
scripts/: pattern_lint.py
src/immunize/: __main__.py  capture.py  cli.py  config.py  diagnose.py  hook_installer.py  inject.py  matcher.py  models.py  runner.py  skill_install.py  storage.py  verify.py
src/immunize/authoring/: cli_author.py
src/immunize/generate/: __init__.py  cursor_rule.py  pytest_gen.py  semgrep.py  skill.py
src/immunize/patterns/async-fn-called-without-await/: SKILL.md  cursor_rule.mdc  pattern.yaml  test_template.py
src/immunize/patterns/async-fn-called-without-await/fixtures/: fix.py  repro.py
src/immunize/patterns/fetch-missing-credentials/: SKILL.md  cursor_rule.mdc  pattern.yaml  test_template.py
src/immunize/patterns/fetch-missing-credentials/fixtures/: fix.jsx  repro.jsx
src/immunize/patterns/import-not-found-python/: SKILL.md  cursor_rule.mdc  pattern.yaml  test_template.py
src/immunize/patterns/import-not-found-python/fixtures/: fix.py  repro.py
src/immunize/patterns/json-decode-no-handling/: SKILL.md  cursor_rule.mdc  pattern.yaml  test_template.py
src/immunize/patterns/json-decode-no-handling/fixtures/: fix.py  repro.py
src/immunize/patterns/missing-env-var/: SKILL.md  cursor_rule.mdc  pattern.yaml  test_template.py
src/immunize/patterns/missing-env-var/fixtures/: fix.py  repro.py
src/immunize/patterns/node-cjs-esm-mismatch/: SKILL.md  cursor_rule.mdc  pattern.yaml  test_template.py
src/immunize/patterns/node-cjs-esm-mismatch/fixtures/: fix.mjs  repro.mjs
src/immunize/patterns/promise-unhandled-rejection/: SKILL.md  cursor_rule.mdc  pattern.yaml  test_template.py
src/immunize/patterns/promise-unhandled-rejection/fixtures/: fix.mjs  repro.mjs
src/immunize/patterns/python-none-attribute-access/: SKILL.md  cursor_rule.mdc  pattern.yaml  test_template.py
src/immunize/patterns/python-none-attribute-access/fixtures/: fix.py  repro.py
src/immunize/patterns/rate-limit-no-backoff/: SKILL.md  cursor_rule.mdc  pattern.yaml  test_template.py
src/immunize/patterns/rate-limit-no-backoff/fixtures/: fix.py  repro.py
src/immunize/patterns/react-hook-missing-dep/: SKILL.md  cursor_rule.mdc  pattern.yaml  test_template.py
src/immunize/patterns/react-hook-missing-dep/fixtures/: fix.jsx  repro.jsx
src/immunize/patterns/timezone-naive-datetime/: SKILL.md  cursor_rule.mdc  pattern.yaml  test_template.py
src/immunize/patterns/timezone-naive-datetime/fixtures/: fix.py  repro.py
src/immunize/skill_assets/: README.md
src/immunize/skill_assets/immunize-manager/: SKILL.md
tests/: test_capture.py  test_capture_hook_mode.py  test_cli.py  test_cli_author.py  test_cli_install_skill.py  test_config.py  test_diagnose.py  test_generate_cursor_rule.py  test_generate_pytest.py  test_generate_semgrep.py  test_generate_skill.py  test_hook_integration.py  test_inject.py  test_install_hook.py  test_integration_e2e.py  test_matcher.py  test_models.py  test_pattern_lint.py  test_patterns_load.py  test_run.py  test_skill_assets.py  test_storage.py  test_verify.py  test_verify_slug.py  test_version.py
tests/fixtures/: cors_error.json  import_error.json  type_error.json
