[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "immunize"
version = "0.0.1"
description = "Your AI coding assistant learns from your errors. Under active development — v0.1.0 coming soon."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Vidit Bhatnagar" }]
keywords = ["claude-code", "cursor", "ai-coding", "developer-tools"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/viditkbhatnagar/immunize"
Repository = "https://github.com/viditkbhatnagar/immunize"

[tool.hatch.build.targets.wheel]
bypass-selection = true
