[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "immunize"
version = "0.2.1"
description = "A curated pattern library that stops AI coding assistants from repeating common runtime errors — offline, no API key required."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Vidit Bhatnagar" }]
keywords = [
    "claude-code",
    "cursor",
    "codex",
    "gemini-cli",
    "ai-coding",
    "developer-tools",
    "skills",
    "regression-tests",
    "pattern-library",
    "error-prevention",
    "guardrails",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.15",
    "click>=8.1.7",
    "rich>=13",
    "pydantic>=2.7",
    "pyyaml>=6",
    "tomli>=2.0; python_version < '3.11'",
    "pytest>=8",
]

[project.optional-dependencies]
author = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8",
    "pytest-mock>=3.12",
    "ruff>=0.6",
    "build",
    "twine",
    "immunize[author]",
]

[project.scripts]
immunize = "immunize.cli:app"

[project.urls]
Homepage = "https://github.com/viditkbhatnagar/immunize"
Repository = "https://github.com/viditkbhatnagar/immunize"
Issues = "https://github.com/viditkbhatnagar/immunize/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/immunize"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
